feat: redesign dashboard + add all improvements
Rebuilt dashboard with pro-level glassmorphism dark theme. Added 7 pages (Overview, Repos, Team, PRs, Issues, Code Velocity, DORA), chart components, loading skeletons, animated counters, mobile responsive sidebar, dark/light toggle, export to PNG, keyboard nav, and filter bar. Created generate-sample-data.ts and generate-readme.ts scripts. Updated GitHub Actions workflow.

Made-with: Cursor

--- a/.github/workflows/update-metrics.yml
+++ b/.github/workflows/update-metrics.yml
@@ -1,92 +1,75 @@
-name: 📊 Update DevMetricsDash
+name: "\U0001F4CA Update DevMetricsDash"
 
 on:
-  # Run on schedule (every day at 6 AM UTC)
   schedule:
-    - cron: "0 6 * * *"
+    - cron: '0 6 * * *'  # Daily at 6 AM UTC
+  workflow_dispatch:       # Manual trigger from Actions tab
 
-  # Allow manual trigger
-  workflow_dispatch:
-
-  # Run on push to main (to update dashboard)
-  push:
-    branches: [main]
-    paths:
-      - "config.yml"
-      - "scripts/**"
-
-# Sets permissions of the GITHUB_TOKEN
 permissions:
   contents: write
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  update-metrics:
+  fetch-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: 📥 Checkout
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: 🟢 Setup Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          cache: "npm"
+          node-version: '20'
+          cache: 'npm'
 
-      - name: 📦 Install root dependencies
+      - name: Install root dependencies
         run: npm ci
 
-      - name: 📦 Install dashboard dependencies
-        run: cd dashboard && npm ci
-
-      - name: 🔍 Fetch GitHub metrics
+      - name: Fetch GitHub metrics
         run: npx tsx scripts/fetch-metrics.ts
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
-        continue-on-error: true
 
-      - name: 🎲 Generate sample data (fallback)
-        if: ${{ !hashFiles('data/metrics.json') }}
-        run: npx tsx scripts/generate-sample-data.ts
-
-      - name: 🎨 Generate SVG charts
+      - name: Generate SVG charts for README
         run: npx tsx scripts/generate-svg-charts.ts
 
-      - name: 📝 Generate README
+      - name: Generate README with live stats
         run: npx tsx scripts/generate-readme.ts
 
-      - name: 🏗️ Build dashboard
-        run: cd dashboard && npm run build
+      - name: Install dashboard dependencies
+        working-directory: dashboard
+        run: npm ci
 
-      - name: 📋 Copy metrics to dashboard
+      - name: Build dashboard
+        working-directory: dashboard
+        run: npx vite build
+
+      - name: Copy metrics to dist
         run: |
           mkdir -p dashboard/dist/data
-          cp data/metrics.json dashboard/dist/data/
+          cp data/metrics.json dashboard/dist/data/metrics.json
 
-      - name: 💾 Commit updated files
+      - name: Commit updated data
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "DevMetricsDash Bot"
-          git add data/ assets/ README.md
-          git diff --staged --quiet || git commit -m "📊 Update metrics — $(date -u '+%Y-%m-%d %H:%M UTC')"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add data/metrics.json assets/ README.md
+          git diff --staged --quiet || git commit -m "chore: update metrics data [skip ci]"
           git push
 
-      - name: 🚀 Setup Pages
+      - name: Setup Pages
         uses: actions/configure-pages@v4
 
-      - name: 📦 Upload Pages artifact
+      - name: Upload to Pages
         uses: actions/upload-pages-artifact@v3
         with:
           path: dashboard/dist
 
-      - name: 🌐 Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
