--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
   "name": "devmetricsdash",
   "version": "1.0.0",
-  "description": "🚀 A stunning developer metrics dashboard that lives inside your GitHub repo",
   "private": true,
   "type": "module",
   "scripts": {
-    "fetch": "tsx scripts/fetch-metrics.ts",
-    "generate:svg": "tsx scripts/generate-svg-charts.ts",
-    "generate:readme": "tsx scripts/generate-readme.ts",
-    "update": "npm run fetch && npm run generate:svg && npm run generate:readme",
-    "dashboard:dev": "cd dashboard && npm run dev",
-    "dashboard:build": "cd dashboard && npm run build",
-    "dashboard:preview": "cd dashboard && npm run preview",
-    "setup": "npm install && cd dashboard && npm install"
+    "fetch": "npx tsx scripts/fetch-metrics.ts",
+    "build": "cd dashboard && npx vite build",
+    "dev": "cd dashboard && npx vite --port 3000"
   },
   "dependencies": {
     "@octokit/graphql": "^7.0.2",
@@ -27,4 +21,3 @@
     "typescript": "^5.3.3"
   }
 }
-
